# macro-monitor-minsky

./: .gitignore  CLAUDE.md  CODE_REVIEW.md  FACTOR_RESEARCH_SUMMARY.md  INDICATOR_SYSTEM_OVERVIEW.md  PRD.md  TRANSFORM_COMPARISON_REPORT.md  __init__.py  config.py  dashboard_app.py  deploy.py  prefect_flow.py  pyproject.toml  requirements.txt  system_orchestrator.py
.claude/: settings.json
.claude/commands/: validate.md
.claude/skills/: fred-api.md  validation-pipeline.md
.streamlit/: config.toml
core/: __init__.py  crack_score.py  fuel_score.py  trend_score.py
crack/: CRACK_LAYER_METHODOLOGY.md  crack_ic_auc_data.csv  crack_ic_auc_summary.csv  crack_score_data.csv
data/: __init__.py  loader.py
docs/: ARCHITECTURE.md  IC_TESTING_METHODOLOGY.md  METHODOLOGY_REPORT.md
lib/: __init__.py  alfred_data.py  factor_validation_gates.py  hac_inference.py  ic_analysis.py  regime_analysis.py  structural_break.py  transform_layers.py
orchestrator/: __init__.py  cli_formatter.py  data_updater.py  explanation.py  risk_budget.py  rules.py  state_machine.py
structure/V1_ST_Debt_Ratio/: README.md  V1_CHANGE_BASED_REPORT.md  V1_REDESIGN_PLAN.md  V1_SPX_COMBINED_DATA.csv  all_methods_data.csv
structure/V2_Unstable_Deposits/: README.md  V2_CHANGE_BASED_REPORT.md  V2_TRANSFORM_COMPARISON.md  V2_VALIDATION_10Y.md  V2_VALIDATION_REPORT.md  factor_data.csv  factor_transforms.csv  (+1 more)
tasks/: REFACTOR_PLAN.md
utils/: __init__.py  transforms.py
validation/: __init__.py  auc_calculator.py  ic_calculator.py  transform_comparator.py  weight_optimizer.py
(+69 files in other folders)
