[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "indicator_test"
version = "0.1.0"
description = "Macroeconomic indicator validation framework with three-layer risk monitoring"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "scipy>=1.9.0",
    "matplotlib>=3.5.0",
    "fredapi>=0.5.0",
    "yfinance>=0.2.0",
    "streamlit>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "data*", "lib*", "utils*", "validation*", "trend*"]

[tool.setuptools.package-data]
"*" = ["*.csv", "*.json"]
